[package]
name = "thea"
version = "1.0.0-beta.001"
description = "I need to do this" # TODO
authors = ["Elliot Jackson <elliot@elliotekj.com>"]
edition = "2018"

[dependencies]
actix-files = "0.2.1"
actix-rt = "1.0.0"
actix-web = "2.0.0"
clap = "2.33.0"
config = "0.10.1"
flexi_logger = "0.14"
html-minifier = "1.1.14"
lazy_static = "1.4.0"
log = "0.4.8"
mime = "0.3.16"
pulldown-cmark = "0.6.1"
serde = "1.0.104"
shellexpand = "1.1.1"
syntect = "3.3.0"
tera = "1.0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
walkdir = "2.2.9"
yaml-rust = "0.4.3"
