[package]
name = "thea"
version = "0.1.4"
description = "Thea is an from-memory website generator and server."
authors = ["Elliot Jackson <elliot@elliotekj.com>"]
edition = "2018"
homepage = "https://github.com/elliotekj/thea"
repository = "https://github.com/elliotekj/thea"
documentation = "https://elliotekj.com/docs/thea"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["site", "generator", "blog", "markdown"]
license = "MIT"

[dependencies]
actix-files = "0.2.1"
actix-rt = "1.0.0"
actix-web = "2.0.0"
clap = "2.33.0"
config = "0.10.1"
env_logger = "0.7.1"
html-minifier = "1.1.14"
lazy_static = "1.4.0"
log = "0.4.8"
mime = "0.3.16"
notify = "4.0.15"
pulldown-cmark = "0.6.1"
serde = "1.0.104"
tera = "1.0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
walkdir = "2.2.9"
yaml-rust = "0.4.3"

# Pin syntect version that doesn't require clang.
# Track https://github.com/rust-onig/rust-onig/pull/126
syntect = "=3.2.0"

[[bin]]
name = "thea"

[profile.release]
lto = true
